@@ -30,7 +30,7 @@
 
 */
 
-static char * version_str = "0.61 20120326";    /* spc4r35 + sbc3r30 */
+static char * version_str = "0.62 20120919";    /* spc4r35 + sbc3r32 */
 
 extern void svpd_enumerate_vendor(void);
 extern int svpd_decode_vendor(int sg_fd, int num_vpd, int subvalue,
@@ -1598,8 +1598,7 @@ decode_b0_vpd(unsigned char * buff, int len, int do_hex, int pdt)
         if (len > 19) {     /* added in sbc3r09 */
             u = (buff[16] << 24) | (buff[17] << 16) | (buff[18] << 8) |
                 buff[19];
-            printf("  Maximum prefetch, xdread, xdwrite transfer length: "
-                   "%u blocks\n", u);
+            printf("  Maximum prefetch transfer length: %u blocks\n", u);
         }
         if (len > 27) {     /* added in sbc3r18 */
             u = ((unsigned int)buff[20] << 24) | (buff[21] << 16) |
