@@ -2,7 +2,7 @@ sg3-utils (1.34-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 07 Sep 2012 23:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 19 Sep 2012 22:00:00 +0200
 
 sg3-utils (1.33-0.1) unstable; urgency=low
 
